--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "knex": "^3.1.0",
     "mysql": "^2.18.1"
   },
