--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
