--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "backend-web-sisfo-ude",
   "version": "1.0.0",
-  "description": "",
+  "description": "API Web SISFO UDE",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Westlee",
   "license": "ISC",
   "dependencies": {
     "archiver": "^7.0.1",
